fixed styling for auth to remove scroll when keyboard is present on mobile

--- a/src/styles/components/_auth.scss
+++ b/src/styles/components/_auth.scss
@@ -8,7 +8,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
-  min-height: 100%;
+  min-height: 100vh;
   padding-bottom: 5rem;
 
   @include respond(phone) {
@@ -16,6 +16,7 @@
     background-color: #141414;
     padding-bottom: 0;
     min-height: auto;
+    border: 2px solid red;
   }
 
   &__logo {
